--- a/main.css
+++ b/main.css
@@ -17,26 +17,26 @@ header {
 	margin: 0 auto;
 	
 }
+
+.hero {
+	width: 800px;
+	display: inline;
+	margin-left: 300px;
+
+}
 h1 {
 	color: #ffffff;
 	font-size: 60px;
 	font-family: "futura", sans-serif;
-	text-align: right;
+	text-align: center;
 	margin-top: 10px;
-	
-}
-
-.hero {
-	width: 500px;
-	display: inline-block;
-	margin-left: 300px;
-
 }
 
 nav {
 	width: 300px;
 	display: inline-block;
 	text-align: center;
+	
 }
 nav li {
 	display: inline;
@@ -57,22 +57,24 @@ nav li a {
 	height: 180px;
 	text-align: right;
 	font-size: 60px;
-	margin: 10px auto 60px;
+	margin: 50px auto 80px;
 	padding-right: 20px;
+
 }
 
-.skills{
-	color: #ffffff;
-	font-size: 60px;
-	text-decoration: underline;
-	text-align: center;
+.skills {
  	background: url(bubbles.png) no-repeat;
 	background-size: 100% auto;
 	background-position: cover; 
 	height: 400px;
-
-
  }
 
+.skills h3 {
+	color: #ffffff;
+	font-size: 60px;
+	text-decoration: underline;
+	text-align: center;
+	padding-top: 15px;
+}
 
 /* footer */
